updated Jupyter notebook

--- a/data/Team_Project_Notebook.ipynb
+++ b/data/Team_Project_Notebook.ipynb
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_set_data(target_month, outlier_cutoff):\n",
+    "def load_set_data(target_month, outlier_cutoff, income_cutoff):\n",
     "    relative_path = '/raw/train.csv'\n",
     "    cur_wd = os.getcwd()\n",
     "    file_path = cur_wd + relative_path\n",
@@ -67,7 +67,7 @@
     "    single_month_frame = df[df['Month'] ==  target_month]\n",
     "    single_month_frame = single_month_frame[single_month_frame['Type_of_Loan'] !=  'Auto Loan']\n",
     "    single_month_frame = single_month_frame[single_month_frame['Amount_invested_monthly'] < outlier_cutoff]\n",
-    "    single_month_frame = single_month_frame[single_month_frame['Annual_Income'] < 500000.0]\n",
+    "    single_month_frame = single_month_frame[single_month_frame['Annual_Income'] < income_cutoff]\n",
     "    \n",
     "\n",
     "    return single_month_frame"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/291337087.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/559672799.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file_path)\n"
      ]
     },
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/291337087.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/559672799.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file_path)\n"
      ]
     },
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/291337087.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d7/l8wqbmzx3m74cqmpn7nsvgch0000gn/T/ipykernel_82954/559672799.py:17: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file_path)\n"
      ]
     },
@@ -197,7 +197,7 @@
     "months = [ 'March' , 'April' , 'July' ]\n",
     "\n",
     "for mn in months:\n",
-    "    dataf = load_set_data(mn , 5000)\n",
+    "    dataf = load_set_data(mn , 5000 , 500000)\n",
     "    plt.figure(figsize=(8,6))\n",
     "    plt.scatter(x=dataf['Annual_Income'] , y=dataf['Amount_invested_monthly'])\n",
     "    plt.title(mn)\n",
